--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,4 +1,4 @@
-/* write your override styles here */
+/* write your override styles here
 .tag-1 {
     background: url(../images/tag-1.png) no-repeat;
     z-index: 7;
@@ -8,4 +8,4 @@
 
   #wall .tag-1 {
     display: none;
-  }
+  } */
